# CetoneOrg

./: CMakeLists.txt
.github/workflows/: build.yml
Sources/: CetoneOrg.cpp  CetoneOrg.h  CetoneOrgDPF.cpp  DistrhoPluginInfo.h  Synth.cpp  chorus.h  defines.h  reverb.h  statics.cpp  statics.h  tonewheel.h
